Descriptions for c1, c2 and c3 into vs-code c4.
Signed-off-by: lucas.bruno <lucas.bruno@zup.com.br>

--- a/src/en/Horusec-VsCode/c2/c2.md
+++ b/src/en/Horusec-VsCode/c2/c2.md
@@ -1,6 +1,11 @@
 # C4Model Horusec-VsCode - C2
 
 ## Description
-After understanding how your system fits into the overall IT environment, a really useful next step is to increase the limit on the system limit with a container diagram. A container "is something like a server-side Web application, applicationsingle page, desktop application, mobile application, database schema, file system, etc.Essentially, a container is a separate / deployable unit (for example, a separate process space) that performs data or stores data.
 
-The container diagram shows the high level of software architecture and how responsibilities are distributed through it. It also shows the main technology choices and how the containers communicate with each other. It is a diagram focused on simple technology andHigh level that is useful for software developers and support team / operations.
+The horusec-vscode extension has three main commands: Start, Stop and Config.
+
+When activated, or Start command, create a horusec-cli image through Docker to read, verify two files and export two results in JSON format for or vs-code. No final analysis or container removed.
+
+During the execution of an analysis, the user also has the option to cancel, through the Stop command. This remove or container command gives horusec-cli em execução.
+
+And by last, we have the Config command, this opens a selection box for any of the options of configuration of the horusec-cli and logo, then select one of them, and open a box of digitação for the value referring to the selected option. These configurations will be reviewed for the image in docker for future analysis runs.
