--- a/src/pt-br/Horusec-VsCode/c2/c2.md
+++ b/src/pt-br/Horusec-VsCode/c2/c2.md
@@ -1,6 +1,11 @@
 # C4Model Horusec-VsCode - C2
 
 ## Descrição
-Depois de entender como seu sistema se encaixa no ambiente geral de TI, um próximo passo realmente útil é aumentar o limite no limite do sistema com um diagrama de contêineres.Um "contêiner" é algo como um aplicativo da Web do lado do servidor, aplicativo de página única, aplicativo de desktop, aplicativo móvel, esquema de banco de dados, sistema de arquivos, etc. Essencialmente, um contêiner é uma unidade de forma separada / implementável (por exemplo, um espaço de processo separado) que executa dados ou armazena dados.
 
-O diagrama de contêiner mostra a forma de alto nível da arquitetura de software e como as responsabilidades são distribuídas através dela.Também mostra as principais escolhas de tecnologia e como os contêineres se comunicam uns com os outros.É um diagrama focado de tecnologia simples e de alto nível que é útil para desenvolvedores de software e equipe de suporte / operações.
+A extensão horusec-vscode possuí três comandos principais: Start, Stop e Config.
+
+Quando acionado, o comando Start, cria uma imagem da horusec-cli através do Docker para realizar a leitura, verificação dos arquivos e a exportação dos resultados em formato JSON de volta para o vs-code. No fim da análise o container é removido.
+
+Durante a execução de uma análise, o usuário também tem a opção de cancelar, através do comando Stop. Este comando remove o container da horusec-cli em execução.
+
+E por fim, temos o comando de Config, este abre uma caixa de seleção para uma das opções de configurações da horusec-cli e logo após selecionar uma delas, é aberta uma caixa de digitação para o valor referente a opção selecionada. Essas configurações serão repassadas para a imagem em docker da horusec-cli nas próximas execuções de análises.
