--- a/src/en/Horusec-VsCode/c1/c1.md
+++ b/src/en/Horusec-VsCode/c1/c1.md
@@ -1,6 +1,7 @@
 # C4Model Horusec-VsCode - C1
 
 ## Description
-A system context diagram is a good starting point for diagramming and documenting a software system, allowing you to refer and see the great figure.Design a diagram showing your system as a box in the center, surrounded by your users and otherssystems that interacts.
 
-Detail is not important here, as this is your expanded opinion showing a large image of the landscape of the system. The focus must be in people (actors, papers, personas, etc.) and software systems, rather than technologies, protocols andOther low level details. It is the type of diagram that you could show for non-technical people.
+The horusec-vscode is an extension to analyze code like horusec-cli through the visual studio code source code editor. Or the user must carry out the installation of the extension through the interface of the visual studio code. It was made to install and access the Horusec in the lateral navigation bar of the vs-code, and displayed the interface of the horusec-vscode extension.
+
+When starting an analysis, a docker image gives horusec-cli and built to verify two files in search of vulnerabilities and return or result for visualization no vs-code.
