translated docs in en/src

--- a/en/src/C1-Context/c1.md
+++ b/en/src/C1-Context/c1.md
@@ -1,39 +1,38 @@
-No primeiro nível podemos ver, de forma geral, como é a ligação entre os diferentes componentes do Horusec e suas respectivas responsabilidades.
+At the first level we can see, in general, how the different components from Horusec and their respective responsibilities are linked.
 
-É neste nível em que há um contexto macro de como o Horusec entrega o resultado de suas análises e permite que você possa gerenciar as vulnerabildades na plataforma web. 
+It is at this level that there is a macro context of how Horusec delivers the results of its analisys and allows you to manage the vulnerabilities on the web platform.
 
-Veja a seguir os componentes do nível 1:
+See below the components of level 1:
 
 
-### **Usuário** 
+### **User** 
   
-- Qualquer pessoa que deseje utilizar o Horusec para realizar análises de código e/ou gestão de vulnerabilidades. 
+- Any person who wants to use Horusec to perform code analisys and/or vulnerability management.
 
-- Pode ser alguém que atue com DevSecOps, Desenvolvimento de Software, Product Management, Qualidade ou em cargo de gestão, etc.
+- It may be someone from DevSecOps, Software Development, Product Management, Quality or a management position, etc.
   
 
+### **Horusec-CLI System** 
 
-### **Sistema Horusec-CLI** 
+- It is the command line interface (CLI) that orchestrates other static code analisys tools.
 
-- É a interface de linha de comando (CLI) que orquestra outras ferramentas de análise estática de código.
+- Its main function is to automatically identify the project's programming language and start the proper tools to, shortly after, export the unified information in a common data.
 
-- Sua principal função é a de identificar automaticamente as linguagens de programação do projeto e iniciar as devidas ferramentas para, logo em seguida, exportar as informações unificadas em um dado em comum. 
+- It is also possible to send the performed analisys to the Horusec-Platform system, where you can perform the vulnerability management in a web application.
 
-- Também é possível enviar a análise realizada para o sistema Horusec-Platform, onde você pode retirar métricas e realizar a gestão de vulnerabilidades em uma aplicação web.
+### **Horusec-Platform System** 
 
-### **Sistema Horusec-Platform** 
+- It is a set of web services for managing and viewing vulnerabilities found by the Horusec-CLI system.
 
-- É conjunto de serviços web para gestão e visualização de vulnerabilidades encontradas pelo sistema Horusec-CLI.
+### **Horusec-Operator System** 
 
-### **Sistema Horusec-Operator** 
+- It is the kubernetes operators system that speeds up and enhances the installation of the Horusec-Platform system in a unified way.
 
-- É o sistema de kubernetes operators que agiliza e potencializa a instação do sistema Horusec-Platform de forma unificada.
+### **Horusec-VsCode Sysetem**
 
-### **Sistema Horusec-VsCode**
+- It is the extension of Horusec-CLI to an integrated development environment (IDE) [Visual Studio Code](https://code.visualstudio.com/), where it is possible to perform analisys without having to install a binary in your local machine.
 
-- É a extensão da Horusec-CLI para um Ambiente de Desenvolvimento Integrado (IDE) [Visual Studio Code](https://code.visualstudio.com/), onde é possível realizar as análises sem precisar instalar um binário em sua máquina local.
+  - **Kubernetes:** Tool that orchestrates application containers. 
 
-  - **Kubernetes:** Ferramenta que orquestra os containers das aplicações.
-
-  - **Resultado:** Resultado das análises realizadas pelos sistemas Horusec-CLI ou Horusec-VsCode.
+  - **Result:** Results of the analisys performed by the Horusec-CLI and Horusec-VsCode systems.
 
