--- a/en/src/C2-Container/c2.md
+++ b/en/src/C2-Container/c2.md
@@ -1,47 +1,48 @@
-No segundo nível podemos verificar, de forma mais detalhada, como a arquitetura do Horusec está interligada aos seus componentes, além das tecnologias que fazem parte deste ecossistema.
+At the second level we can verify, in more detail, how the Horusec architecture is interconnected to its components, in addition technologies that are part of this ecosystem.
 
-O Horusec foi construído utilizando usando as seguintes abordagens:
+Horusec was built using the following approaches:
 
 ### **Horusec-CLI**
 
-É um compilador que executa localmente, ou seja na máquina do usuário, seja atráves de uma máquina de desenvolvimento ou de uma esteira de CI/CD em busca de vulnerabilidades. Os seus containers são:
+It is a compiler that runs locally, that is, either on the user's machine, either through a development machine or a CI/CD track searching for vulnerabilities. Its containers are:
 
-  - **Horusec-CLI:** Interface de linha de comando (CLI) que realiza orquestração de ferramentas de análise estática de código.
+- **Horusec-CLI:** Command line interface (CLI) that orchestrates static code analisys tools.
 
-- O **Horusec-VsCode:** É uma extensão da ferramenta Visual Studio Code que utiliza a Horusec-CLI para análisar projetos em busca de vulnerabilidades. Seus containers são:
-  - **Horusec-VsCode** é responsável por iniciar o Horusec-CLI em imagem docker e trazer o resultado da análise para dentro do Ambiente de Desenvolvimento Integrado (IDE) em um formato amigável a fim de garantir que o desenvolvedor faça suas devidas modificações.
+- **Horusec-VsCode:** An extension of the Visual Studio Code tool that uses Horusec-CLI to analize projects searching for vulnerabilities. Its containers are:
+
+  - **Horusec-VsCode** is responsible for starting Horusec-CLI in a docker image and bringing the analisys results into the Integrated Development Environment (IDE) in a friendly format in order to ensure the developer makes the necessary modifications.
 
 
 ### **Horusec-Platform**
 
-É uma plataforma web construída em microsserviços para visualização e gestão das vulnerabilidades. Seus containers são:
+It is a web platform built in microservices for viewing and managing vulnerabilities. Its containers are:
 
 #### **API**
-Responsável por salvar as análises realizadas via Horusec-CLI no banco de dados principal e publicar para os serviços analytic e webhook via message broker.
+Responsible for saving the analisys performed via Horusec-CLI into the main database and publish to analytic and webhook services via message broker .
 
 
 #### **Analytic**
-Responsável por receber as análises realizadas via message broker e salvar no banco de dados analytic para visualização no dashboard do container Horusec-Manager.
+Responsible for receiving the analisys performed via message broker and saving in the analytic database for viewing in the dashboard of the Horusec-Manager container.
 
 #### **Auth**
-Responsável por gerenciar sessão e acessos a plataforma web através do container Horusec-Manager.
+Responsible for managing the session and accesses to the web platform through Horusec-Manager container.
 
 #### **Core**
-Responsável pelo gerenciamento de repositórios, workspaces e tokens da plataforma web através do container Horusec-Manager.
+Responsible for managing repositories, workspaces and tokens of the web platform through Horusec-Manager container.
 
 #### **Manager**
-Responsável por disponibilizar a página estática para integração com os containers do Horusec-Platform.
+Responsible for providing the static page for integration with other Horusec-Platform containers.
 
 #### **Messages**
-Responsável por diparos de e-mails em determinadas ações realizadas pelo usuário da plataforma web por meio do container Horusec-Manager.
+Responsible for e-mail triggers in certain actions performed by the user of the web platform through Horusec-Manager container.
 
 #### **Vulnerability**
-Responsável por realizar a gestão das vulnerabilidades criadas pelo container Horusec-API.
+Responsible for managing the vulnerabilities created by Horusec-API container.
 
 #### **Webhook**
-Responsável pelo disparo de análises para serviços de terceiros via HTTP na plataforma web através do container Horusec-Manager.
+Responsible for triggering analisys for third-party services via HTTP in the web platform through the Horusec-Manager container.
 
-#### O **Horusec-Operator**
-É uma aplicação usando a base de kubernetes operator para agilizar e garantir que os serviços sejam entregues nos formatos desejados. Seu container é:
+#### The **Horusec-Operator**
+Is an application using the kubernetes operator base to speed up and ensure that the services are delivered in the desired format. Its container is:
 
-  - **Horusec-Operator:** Responsável por realizar a integração com o Kubernetes e, após ser instalado na sua CRD no cluster, ajuda a identificar pedidos de modificações do usuário e aplicá-los no cluster de acordo com as configurações enviadas pelo usuário.
+  - **Horusec-Operator:**  Responsible for performing the integration with Kubernetes and, after being installed on your CRD in the cluster, helps identify the user's modification requests and applying them in the cluster according to the settings sent by the user.
