--- a/en/src/C1-Context/c1.md
+++ b/en/src/C1-Context/c1.md
@@ -18,7 +18,7 @@ See below the components of level 1:
 
 - Its main function is to automatically identify the project's programming language and start the proper tools to, shortly after, export the unified information in a common data.
 
-- It is also possible to send the performed analisys to the Horusec-Platform system, where you can perform the vulnerability management in a web application.
+- It is also possible to send the performed analisys to the Horusec-Platform system, where you can extract metrics and perform the vulnerability management in a web application.
 
 ### **Horusec-Platform System** 
 
