--- a/en/src/C2-Container/c2.md
+++ b/en/src/C2-Container/c2.md
@@ -18,11 +18,11 @@ It is a compiler that runs locally, that is, either on the user's machine, eithe
 It is a web platform built in microservices for viewing and managing vulnerabilities. Its containers are:
 
 #### **API**
-Responsible for saving the analisys performed via Horusec-CLI into the main database and publish to analytic and webhook services via message broker .
+Responsible for saving the analisys performed via Horusec-CLI into the main database and publish to analytic and webhook services via message broker.
 
 
 #### **Analytic**
-Responsible for receiving the analisys performed via message broker and saving in the analytic database for viewing in the dashboard of the Horusec-Manager container.
+Responsible for receiving the analisys performed via message broker and saving it in the analytic database for viewing in the dashboard of the Horusec-Manager container.
 
 #### **Auth**
 Responsible for managing the session and accesses to the web platform through Horusec-Manager container.
@@ -43,6 +43,6 @@ Responsible for managing the vulnerabilities created by Horusec-API container.
 Responsible for triggering analisys for third-party services via HTTP in the web platform through the Horusec-Manager container.
 
 #### The **Horusec-Operator**
-Is an application using the kubernetes operator base to speed up and ensure that the services are delivered in the desired format. Its container is:
+It is an application using the kubernetes operator base to speed up and ensure that the services are delivered in the desired format. Its container is:
 
   - **Horusec-Operator:**  Responsible for performing the integration with Kubernetes and, after being installed on your CRD in the cluster, helps identify the user's modification requests and applying them in the cluster according to the settings sent by the user.
